--- a/templates/events/_events.html.twig
+++ b/templates/events/_events.html.twig
@@ -1,5 +1,5 @@
 {% if events is empty %}
-    <p class="alert alert-info w-100">Vous n'avez encore rejoint aucun évènement</p>
+    <p class="alert alert-info w-100">Aucun résultat</p>
 {% else %}
     {% for event in events %}
     <div class="col-md-6 col-12 {% if event.date < date() %}event-finished{% endif %}" id="event-{{event.id}}">
